fix horizontal scroll

--- a/src/components/weather/forecast/Forecast.module.scss
+++ b/src/components/weather/forecast/Forecast.module.scss
@@ -44,6 +44,7 @@
         &.open {
           grid-template-rows: 1fr;
           transform: scale(1);
+          overflow-x: auto;
         }
         & > div {
           min-height: 0;
